--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,10 @@ confection==0.1.5
 cymem==2.0.11
 en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl#sha256=1932429db727d4bff3deed6b34cfc05df17794f4a52eeb26cf8928f7c1a0fb85
 Flask==3.1.0
+Flask-Login==0.6.3
+Flask-SQLAlchemy==3.1.1
+greenlet==3.2.2
+gunicorn==23.0.0
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
@@ -35,6 +39,7 @@ smart-open==7.1.0
 spacy==3.8.5
 spacy-legacy==3.0.12
 spacy-loggers==1.0.5
+SQLAlchemy==2.0.41
 srsly==2.5.1
 thinc==8.3.6
 tqdm==4.67.1
@@ -46,4 +51,3 @@ wasabi==1.1.3
 weasel==0.4.1
 Werkzeug==3.1.3
 wrapt==1.17.2
-gunicorn==21.2.0
